<resources>
    <string name="app_name">DHProject</string>
    <string name="my_heroes_title">Meus heróis</string>
    <string name="per_night_label">por noite</string>
    <string name="chat_button_label">Conversar</string>
    <string name="book_button_label">Reservar de novo</string>
    <string name="bottom_navigation_search">Busca</string>
    <string name="bottom_navigation_messages">Mensagens</string>
    <string name="bottom_navigation_heroes">Heróis</string>
    <string name="bottom_navigation_bookings">Reservas</string>
    <string name="bottom_navigation_menu">Menu</string>
    <string name="recent_hero_subtitle">Heróis com quem hospedei</string>
    <string name="favorite_hero_subtitle">Heróis favoritos</string>
</resources>
