<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/default_margin">
    <ImageView
        android:id="@+id/imgHeroAvatar"
        android:layout_width="@dimen/user_avatar_image_size"
        android:layout_height="@dimen/user_avatar_image_size"
        android:foreground="@drawable/circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imgSuperHero"
        android:layout_width="@dimen/medium_image_size"
        android:layout_height="@dimen/medium_image_size"
        android:src="@drawable/host_list_icon_badge"
        app:layout_constraintEnd_toEndOf="@id/imgHeroAvatar"
        app:layout_constraintBottom_toBottomOf="@id/imgHeroAvatar"/>
    <LinearLayout
        android:id="@+id/userLayoutCol1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toRightOf="@id/imgHeroAvatar"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtName"
            android:textStyle="bold"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/user_name_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtNeighborhood"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/user_neighborgood_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            style="?android:attr/ratingBarStyleSmall"
            android:progressTint="@color/yellow"
            android:rating="5"
            android:numStars="5" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/userLayoutCol2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/userLayoutCol1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <!--
        <ImageView
            android:id="@+id/imgFavorite"
            android:src="@drawable/icon_like_border_vector_gray_battleship"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->
        <br.com.doghero.dhproject.components.FavoriteIcon
            android:layout_width="@dimen/medium_image_size"
            android:layout_height="@dimen/medium_image_size"
            android:layout_gravity="end"/>
        <TextView
            android:id="@+id/price"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/user_name_font_size"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/per_night_label"
            android:textSize="@dimen/small_font_size"
            android:gravity="end"
            android:textColor="@color/secondary_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgHeroAvatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_height="@dimen/hero_list_button_height"
            android:text="@string/chat_button_label"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:textAllCaps="false"
            android:background="@drawable/chat_button_background"/>
        <Button
            android:id="@+id/btnBook"
            android:layout_width="0dp"
            android:layout_height="@dimen/hero_list_button_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/book_button_label"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/book_button_background"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
